# opencv-cpp-tools

./: .gitignore  CmakeLists.txt
cmake_configs/: gui-configs.cmake
projects/camera-recorder/: CMakeLists.txt  main.cpp
